Thu Sep 16 22:48:49 1993  Kevin Layer  (layer@sole)

	* Makefile: fi-dist hacking

	* UserGuide.n: just include major version number

	* fi-leep-lemacs.el: backout in progress fix 

	* fi-lep.el: fi::error-if-request-in-progress is outta here, so
	don't call it.

*******************************************************************************
2.0.10 public release
*******************************************************************************

Mon Sep 13 13:49:07 1993  Kevin Layer  (layer@sole)

	* fi-composer.el: add fi:show-calls-to-and-from

	* fi-lemacs.el: finish menus (some undefined functions were being
	called for xref stuff)

Fri Sep 10 10:34:14 1993  Kevin Layer  (layer@sole)

	* fi-lemacs.el: missed fixing one of the menus

*******************************************************************************
2.0.8 public release
*******************************************************************************

Fri Sep 10 08:43:07 1993  Kevin Layer  (layer@sole)

	* fi-site-init.el: lemacs 19.8 needs cl-compat, too.

Thu Sep  9 11:07:53 1993  Kevin Layer  (layer@sole)

	* fi-lemacs.el: 19.8 active-p menu spec change

Tue Sep  7 17:17:52 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: more fiddling with the menus; fix bugs in active-p
	menu functions

	* fi-lep.el: only call lep::kill-list-all-completions-session when
	it exists

	* fi-modes.el: remove put of 'screen-name since we'll do it
	differently now

	* fi-subproc.el: fix calling of fi:display-buffer-function tcp
	connection code, too

	* fi-utils.el: fi::switch-to-buffer-new-screen doesn't care about
	which mode anymore.

Thu Sep  2 11:32:57 1993  Kevin Layer  (layer at sole)

	* fi-utils.el:
	* fi-lep.el:
	* fi-dmode.el:
	* fi-changes.el:
	* fi-basic-lep.el:
	  change all `package' local variables to `xpackage', because
	  `package' is often local (due to the file mode line) and
	  set-buffer undoes dynamic bindings of local variables when
	  switching from one buffer to another.  Foo!
