@@ -1,3 +1,9 @@
+Thu Sep 23 00:10:52 1993  Kevin Layer  (layer@sole)
+
+	* fi-indent.el: search's should never error
+
+	* fi-modes.el: look for -*- only in first line of file
+
 Thu Sep 16 22:48:49 1993  Kevin Layer  (layer@sole)
 
 	* Makefile: fi-dist hacking
